Committed "devel" version - builds against latest and greatest...